# tour-guide-copilot

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-CONTENT  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: tests.yml
copilot/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  generator.py  itinerary.py  llm.py  parser.py  plans.py  renderer.py  schemas.py
docs/: ARCHITECTURE.md  PHILOSOPHY.md  PROMPTS.md  SCHEMA.md  index.html
examples/input/: madrid_manolo.md
examples/output/: guide.json  guide.md  index.html
prompts/: 00_system.md  01_extract_itinerary.md  02_generate_plans.md
templates/site/: index.html
tests/: test_config.py  test_parser.py  test_renderer.py  test_schemas.py
